@@ -39,7 +39,8 @@
 <blockquote>
 <ul class="simple">
 <li>coders/cals.c (ReadCALSImage): Silence Coverity 10086 &quot;Unchecked
-return value from library&quot;.</li>
+return value from library&quot;.
+(ReadCALSImage): Silence Coverity 10085 &quot;Unchecked return value&quot;.</li>
 <li>magick/enhance.c (ModulateImage): Silence Coverity 10087
 &quot;Unchecked return value&quot;.</li>
 </ul>
